<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppActivity">

    <TextView
        android:id="@+id/Pranathi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pranathi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Rahul"/>

    <TextView
        android:id="@+id/Rahul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rahul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Pranathi"
        app:layout_constraintBottom_toTopOf="@id/Madhuri"/>

    <TextView
        android:id="@+id/Madhuri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/madhuri"
        app:layout_constraintBottom_toTopOf="@id/TeamName"
        app:layout_constraintTop_toBottomOf="@id/Rahul"/>

    <TextView
        android:id="@+id/TeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/team35"
        app:layout_constraintTop_toBottomOf="@id/Madhuri"/>

</androidx.constraintlayout.widget.ConstraintLayout>